--- a/Selenium_Automation_v1.1/test-output/old/Automation Suite/methods.html
+++ b/Selenium_Automation_v1.1/test-output/old/Automation Suite/methods.html
@@ -1,32 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:32</td>   <td>0</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:testcases.TC_004_SampleFunc@1139b2f3]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116237769</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:32</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_004_SampleFunc@1139b2f3]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@1769354484</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:32</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_003_SampleFunc@1700915]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@2022062330</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:32</td>   <td>123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_002_SampleFunc@654f0d9c]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@199829145</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:32</td>   <td>123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_001_SampleFunc@22a637e7]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1468767848</td>   <td></td> </tr>
-<tr bgcolor="f978b0">  <td>20/05/01 21:16:36</td>   <td>4566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_SampleFunc.testcase()[pri:0, instance:testcases.TC_001_SampleFunc@22a637e7]">testcase</td> 
-  <td>TestNG-tests-1@1468767848</td>   <td></td> </tr>
-<tr bgcolor="df84b8">  <td>20/05/01 21:16:36</td>   <td>4565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_004_SampleFunc.testcase()[pri:0, instance:testcases.TC_004_SampleFunc@1139b2f3]">testcase</td> 
-  <td>TestNG-tests-4@1769354484</td>   <td></td> </tr>
-<tr bgcolor="ae9bb5">  <td>20/05/01 21:16:36</td>   <td>4565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_SampleFunc.testcase()[pri:0, instance:testcases.TC_003_SampleFunc@1700915]">testcase</td> 
-  <td>TestNG-tests-3@2022062330</td>   <td></td> </tr>
-<tr bgcolor="82b6b2">  <td>20/05/01 21:16:36</td>   <td>4565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_SampleFunc.testcase()[pri:0, instance:testcases.TC_002_SampleFunc@654f0d9c]">testcase</td> 
-  <td>TestNG-tests-2@199829145</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:48</td>   <td>16764</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_002_SampleFunc@654f0d9c]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@199829145</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:49</td>   <td>17262</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_004_SampleFunc@1139b2f3]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@1769354484</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:50</td>   <td>18540</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_001_SampleFunc@22a637e7]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1468767848</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:52</td>   <td>20078</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_003_SampleFunc@1700915]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@2022062330</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>20/05/01 21:16:52</td>   <td>20215</td> <td title="&lt;&lt;Base.afterSuite(java.lang.String)[pri:0, instance:testcases.TC_004_SampleFunc@1139b2f3]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@116237769</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:02:29</td>   <td>0</td> <td title="&gt;&gt;Base.beforeSuite()[pri:0, instance:testcases.TC_004_SampleFunc@7a69b07]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1438098656</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:02:29</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_004_SampleFunc@7a69b07]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@2113932051</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:02:29</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_003_SampleFunc@21de60b4]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@785783427</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:02:29</td>   <td>181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_002_SampleFunc@6a400542]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@661467886</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:02:29</td>   <td>181</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:testcases.TC_001_SampleFunc@6fe7aac8]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@360447095</td>   <td></td> </tr>
+<tr bgcolor="706975">  <td>20/05/03 21:03:02</td>   <td>33146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_003_SampleFunc.testcase()[pri:0, instance:testcases.TC_003_SampleFunc@21de60b4]">testcase</td> 
+  <td>TestNG-tests-3@785783427</td>   <td></td> </tr>
+<tr bgcolor="99b2f3">  <td>20/05/03 21:03:02</td>   <td>33146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_004_SampleFunc.testcase()[pri:0, instance:testcases.TC_004_SampleFunc@7a69b07]">testcase</td> 
+  <td>TestNG-tests-4@2113932051</td>   <td></td> </tr>
+<tr bgcolor="f978b0">  <td>20/05/03 21:03:02</td>   <td>33146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_SampleFunc.testcase()[pri:0, instance:testcases.TC_001_SampleFunc@6fe7aac8]">testcase</td> 
+  <td>TestNG-tests-1@360447095</td>   <td></td> </tr>
+<tr bgcolor="af6d9c">  <td>20/05/03 21:03:02</td>   <td>33146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_002_SampleFunc.testcase()[pri:0, instance:testcases.TC_002_SampleFunc@6a400542]">testcase</td> 
+  <td>TestNG-tests-2@661467886</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:03:32</td>   <td>63228</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_003_SampleFunc@21de60b4]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-3@785783427</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:03:37</td>   <td>68173</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_002_SampleFunc@6a400542]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@661467886</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:03:37</td>   <td>68350</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_004_SampleFunc@7a69b07]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-4@2113932051</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:03:38</td>   <td>69186</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.afterClass()[pri:0, instance:testcases.TC_001_SampleFunc@6fe7aac8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@360447095</td>   <td></td> </tr>
+<tr bgcolor="b479da">  <td>20/05/03 21:03:39</td>   <td>69988</td> <td title="&lt;&lt;Base.afterSuite(java.lang.String)[pri:0, instance:testcases.TC_004_SampleFunc@7a69b07]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1438098656</td>   <td></td> </tr>
 </table>
